packages/build/tests/error/build/fixtures/cancel_compat/plugin.js
module.exports = {
  async onPreBuild({
    utils: {
      build: { cancel },
    },
  }) {
    cancel('test')
  },
}
